# bosch-one

./: .gitignore  CMakeLists.txt  Kconfig  README.md  bosch-one.yaml  compatibility-matrix.txt  west-ncs.yml
boards/arm/bosch_app30/: Kconfig.board  Kconfig.defconfig  board.c  board.cmake  bosch_app30.dts  bosch_app30_1.overlay  bosch_app30_2.overlay  bosch_app30_3.overlay  bosch_app30_4.overlay  bosch_app30_defconfig  bosch_app30_revs.dtsi
boards/arm/bosch_app31/: Kconfig.board  Kconfig.defconfig  board.c  bosch_app31-pinctrl.dtsi  bosch_app31.dts  bosch_app31_1.overlay  bosch_app31_2.overlay  bosch_app31_3.overlay  bosch_app31_4.overlay  bosch_app31_defconfig  bosch_app31_revs.dtsi  pre_dt_board.cmake
boards/arm/bosch_nicla_sense/: Kconfig.board  Kconfig.defconfig  board.c  board.cmake  bosch_nicla_sense-pinctrl.dtsi  bosch_nicla_sense.dts  bosch_nicla_sense.yaml  bosch_nicla_sense_defconfig  readme.rst
doc/: Bosch One Installation Guide.md
doc/COINES/: COINES for Zephyr User Guide.md
doc/bhix60/: BHIX60 Zephyr Driver User Guide.md
doc/drivers/: Sensor Driver Template Guide.md
drivers/: CMakeLists.txt  Kconfig
drivers/bat/: CMakeLists.txt  Kconfig  Kconfig.bat_level_adc  Kconfig.bq25120  bat_level_adc.c  bq25120.c  bq25120.h  bq25120_defs.h
drivers/eeprom/: CMakeLists.txt  Kconfig  Kconfig.ds28e05  Kconfig.dummy_eeprom  eeprom_ds28e05.c  eeprom_ds28e05.h  eeprom_dummy.c
drivers/flash/: CMakeLists.txt  Kconfig
drivers/led/: CMakeLists.txt  Kconfig  Kconfig.fl3194  fl3194.c
drivers/sensor/: CMakeLists.txt  Kconfig
drivers/sensor/bhix60/: bhix60.c  (+14 more)
drivers/temp/: CMakeLists.txt  Kconfig  Kconfig.temp_nrf5_amb  temp_nrf5_amb.c
drivers/w1/: CMakeLists.txt  Kconfig  Kconfig.w1_bbash  w1_bbash.c
dts/bindings/: bat-level-adc.yaml  bosch,bhix60.yaml  bosch,bmxx-spi.yaml  bosch,shuttle-board.yaml  dummy-eeprom.yaml  issi,is31fl3194.yaml  maxim,ds28e05.yaml  nordic,nrf-temp-amb.yaml  ti,bq25120.yaml  w1-bbash.yaml  winbond,spim-nand.yaml  zephyr,fstab,flogfs.yaml
include/: coines.h
include/drivers/: bq25120.h  flash_nand.h
lib/: CMakeLists.txt  Kconfig
lib/COINES/: CMakeLists.txt  Kconfig.coines  README.rst  coines_timed_interrupt.c  coines_zephyr.c  common_services.h  hts.c  nus_adapter.c  usb_cdc.c
samples/coines/sensor_script/: CMakeLists.txt  Jrun help.txt  README.rst  buildone.bat  prj.conf  sample.yaml  testall.bat  testone.bat  zephyr-shell.bat
samples/sensor/bhix60/: CMakeLists.txt  README.rst  prj.conf  sample.yaml
samples/sensor/bhix60/boards/: arduino_nicla_sense_me.overlay  bosch_app30_1.overlay  bosch_app3x_overlay.conf  bst_ab3_nrf52840_overlay.conf
samples/sensor/bhix60/src/: main.c  main_aux.c  main_bhi3.c  main_bsec.c  main_custom.c  main_klio.c  main_pdr.c  main_swim.c  main_wake.c
samples/sensor/sensor_driver_template/: CMakeLists.txt  Kconfig  README.rst  sample.yaml
samples/sensor/sensor_driver_template/driver/: CMakeLists.txt  Kconfig  bxx.c  bxx.h
samples/sensor/sensor_driver_template/dts/bindings/: bosch,bxx-i2c.yaml  bosch,bxx-spi.yaml
samples/sensor/sensor_driver_template/sample/: CMakeLists.txt  README.rst  prj.conf  sample.yaml
samples/sensor/sensor_driver_template/sample/boards/: bst_ab3_nrf52840.overlay
samples/sensor/sensor_driver_template/sample/src/: main.c
sensor-api/: CMakeLists.txt  Kconfig
sensor-api/bhy2/: CMakeLists.txt  Kconfig.bhy2  bhy2.c  bhy2.h  bhy2_defs.h  bhy2_hif.c  bhy2_hif.h  bhy2_parse.c  bhy2_parse.h
sensor-api/bmi270/: CMakeLists.txt  Kconfig.bmi270  bmi2.c  bmi2.h  bmi270.c  bmi270.h  bmi270_context.c  bmi270_context.h  bmi270_legacy.c  bmi270_legacy.h  bmi270_maximum_fifo.c  bmi270_maximum_fifo.h  bmi2_defs.h
subsys/: CMakeLists.txt  Kconfig
subsys/fs/: CMakeLists.txt  Kconfig  Kconfig.flogfs  README.rst  flogfs.c  flogfs.h  flogfs_conf.h  flogfs_conf_implement.h  flogfs_fs.c  flogfs_fs.h
(+263 files in other folders)
